<?xml version="1.0"?>
<package format="2">
  <name>maze-runner</name>
  <version>0.0.1</version>
  <description>
    <p>PROJECT: "Maze Runner"</p>
    <p>
      This package contains launch files and python script to execute the
      motion of moving a manipulator through a maze.
    </p>
    <p>
      <b>Hardware Application</b>
    </p>
    <ul>
      <li>Motoman MH5 - Default - ROS Industrial</li>
    </ul>
    <p>
      Before using any of the files included in this package, be sure to check
      they are correct for the particular robot model and configuration you
      intend to use them with. Further, confirm motion with simulation prior
      to physical testing.
    </p>
  </description>

  <author>acbuynak</author>
  <maintainer email="buynak.9@buckeyemail.osu.edu">Adam Buynak (AIMS Lab @ The Ohio State University)</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>motoman_mh5_moveit_config</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <test_depend>moveit_resources</test_depend>

</package>
